# orbit-wars-lab

./: .dockerignore  .gitignore  AGENTS.md  AUTONOMY_POLICY.md  Cargo.toml  DECISIONS.md  Dockerfile  EXPERIMENTS.md  Makefile  README.md  SUBMISSION_POLICY.md  compose.yaml  experiments.duckdb  goal.md  loop_queue.md  orbit_wars_kaggle_4p_h9_python_only.ipynb  orbit_wars_kaggle_long_drl_checkpoints.ipynb  pyproject.toml  requirements.txt  todo.md
.autoresearch/: program.md  repo-profile.json  repo-profile.md  results.tsv  workspace.json
artifacts/: submission-check.py  submission.py  submission_benchmark.json
bots/: __init__.py
configs/: env_curriculum_static.yaml  env_full.yaml  eval_final.yaml  eval_quick.yaml  eval_quick_sample.yaml  eval_top5_proxy.yaml  final_candidate_pool.yaml  final_selection.yaml  league.yaml  objective_validation.yaml  pool_v1.yaml  ppo.yaml  submission_gate.yaml
crates/orbit_wars_py/: Cargo.toml
crates/orbit_wars_py/src/: lib.rs
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  BLUEPRINT.md  COMPETITIVE_INTEL.md  DECISIONS.md  EXPERIMENTS_REPORT.md  EXPERIMENTS_REVALIDATION.md  HEURISTIC_LITERATURE.md  LOSS_TAXONOMY.md  OPENING_4P_ANALYSIS.md  PARITY.md  PARTICLE_INTENT_HYPOTHESIS.md  PLAYBOOK.md  PORTFOLIO_POST.md  README.md  SELECTOR.md  SELECTOR_BASELINE.md  SUBMISSION.md  SUBMISSION_AUDIT_2026-06-11.md  TRAINING.md  TRAINING_LOOP.md  auto_research_pipeline.md
orbit_lite/: __init__.py  adapter.py  aiming.py  garrison_launch.py  intercept_aim.py  movement.py  movement_step.py  obs.py  planner_core.py
orbit_wars_gym/: __init__.py
scripts/: audit_map_bias.py  audit_ppo_checkpoints.py  auto_submit_gate.py  benchmark_garrison_cache.py  benchmark_policy_pool.py  benchmark_ppo_rollout.py  benchmark_ppo_submission.py  benchmark_sim.py  benchmark_submission.py  build_release.sh  collect_value_dataset.py  (+94 more)
(+204 files in other folders)
