[package]
name = "orbit_wars_py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "orbit_wars_rs"
crate-type = ["cdylib"]

[dependencies]
orbit_wars_core = { path = "../orbit_wars_core" }
numpy = "0.27"
pyo3 = { version = "0.27", features = ["extension-module"] }
rmp-serde = "1.3"
serde_json = "1.0"
